--- a/FakeAtlas/Views/SearchView.xaml
+++ b/FakeAtlas/Views/SearchView.xaml
@@ -3,10 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:FakeAtlas.Views"
+             xmlns:local="clr-namespace:FakeAtlas.Views" 
+             xmlns:viewmodels="clr-namespace:FakeAtlas.ViewModels"
+             d:DataContext="{d:DesignInstance Type=viewmodels:SearchViewModel}"
+             xmlns:model="clr-namespace:FakeAtlas.Models"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Style TargetType="ScrollBar" BasedOn="{StaticResource CustomScroll}">
 
+        </Style>
+    </UserControl.Resources>
     <Border BorderBrush="#FF4F5A66" BorderThickness="1 1 0 0">
         <Grid>
         <Grid.Background>
@@ -17,6 +24,7 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="13"/>
             <RowDefinition Height="30"/>
+            <RowDefinition Height="10"/>
             <RowDefinition Height="121*"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
@@ -30,17 +38,85 @@
             <ColumnDefinition/>
             <ColumnDefinition Width="10"/>
             <ColumnDefinition/>
-            <ColumnDefinition/>
+                <ColumnDefinition Width="10"/>
+                <ColumnDefinition/>
             <ColumnDefinition Width="10"/>
         </Grid.ColumnDefinitions>
-        <Button Grid.Row="1" Grid.Column="1" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_From}" Foreground="AliceBlue" Opacity="0.75" HorizontalAlignment="Left"  FontSize="10"  />
-        <Button Grid.Row="1" Grid.Column="3" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_To}"   Foreground="AliceBlue" Opacity="0.75" HorizontalAlignment="Left"  FontSize="10"  />
-        <Button Grid.Row="1" Grid.Column="5" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_Date}" Foreground="AliceBlue" Opacity="0.75" HorizontalAlignment="Left"  FontSize="10"  />
-        <TextBox Grid.Row="2" Grid.Column="1" Style="{DynamicResource InputTextBox}"/>
-        <TextBox Grid.Row="2" Grid.Column="3" Style="{DynamicResource InputTextBox}"/>
-        <Button  Grid.Row="4" Grid.Column="8" Style="{DynamicResource TiledButton}" Content="{DynamicResource m_Search}" FontSize="19"/>
-        <DatePicker Grid.Row="2" Grid.Column="5" Style="{DynamicResource DP}"/>
-        
+        <Button Grid.Row="1" Grid.Column="1" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_From}" Foreground="AliceBlue" HorizontalAlignment="Left"  FontSize="10" />
+        <Button Grid.Row="1" Grid.Column="3" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_To}"   Foreground="AliceBlue"     HorizontalAlignment="Left"  FontSize="10"  />
+        <Button Grid.Row="1" Grid.Column="5" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_Date}" Foreground="AliceBlue"     HorizontalAlignment="Left"  FontSize="10"  />
+        <TextBox Text="{Binding SelectedOrder.PathFrom, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="1" Style="{DynamicResource InputTextBox}"/>
+            <TextBox Text="{Binding SelectedOrder.PathTo, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="3" Style="{DynamicResource InputTextBox}"/>
+        <Button Command="{Binding FindCommand}" Grid.Row="5" Grid.Column="9" Style="{DynamicResource TiledButton}" Content="{DynamicResource m_Search}" FontSize="19"/>
+            <DatePicker SelectedDate="{Binding SelectedOrder.DepartureTime, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="5" Style="{DynamicResource DP}" Opacity="0.85"/>
+            <ScrollViewer Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="7" Opacity="0.99">
+                <ListBox ItemsSource="{Binding SelectedOrders, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0"
+                         SelectedItem="{Binding SelectedItemProperty}">
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListBoxItem}">
+                            <Setter Property="Background" Value="#FFBBD1FF"/>
+                            <Setter Property="Foreground" Value="#FF14213C"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                        <Border x:Name="brd" Background="{TemplateBinding Background}" 
+                                          BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="4">
+                                            <RadioButton Focusable="False" Margin="{TemplateBinding Padding}" Foreground="{TemplateBinding Foreground}"
+                                                          IsChecked="{Binding Path=IsSelected, RelativeSource={RelativeSource TemplatedParent},Mode=TwoWay}">
+                                                <ContentPresenter/>
+                                            </RadioButton>
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsSelected" Value="True">
+                                                <Setter Property="Background" Value="#FF8AB4FF"/>
+                                                <Setter Property="Foreground" Value="White"/>
+                                                <Setter Property="BorderThickness" Value="1"/>
+                                                <Setter Property="BorderBrush" Value="Black"/>
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="3"/>
+                                    <ColumnDefinition Width="3"/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="3"/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="3"/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="3"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <WrapPanel>
+                                    <WrapPanel.InputBindings>
+                                        <MouseBinding Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}, Path=DataContext.SelectCommand}"  Gesture="LeftDoubleClick"/>
+                                    </WrapPanel.InputBindings>
+                                    <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding PathFrom}">-</TextBlock>
+                                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding PathTo}"/>
+                                    <TextBlock Grid.Row="0" Grid.Column="3" Text="{DynamicResource m_OrderTime}"/>
+                                    <TextBlock Grid.Row="0" Grid.Column="5" Text="{Binding OrderTime}"></TextBlock>
+                                    <TextBlock Grid.Row="0" Grid.Column="7" Text="{DynamicResource m_DepartureTime}"/>
+                                    <TextBlock Grid.Row="0" Grid.Column="9" Text="{Binding DepartureTime}"></TextBlock>
+                                    <TextBlock Grid.Row="0" Grid.Column="11" Text="{DynamicResource m_Cost}"/>
+                                    <TextBlock Grid.Row="0" Grid.Column="13" Text="{Binding Cost}"></TextBlock>
+                                </WrapPanel>
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </ScrollViewer>
     </Grid>
     </Border>
 </UserControl>
