--- a/FakeAtlas/Views/MainWindow.xaml
+++ b/FakeAtlas/Views/MainWindow.xaml
@@ -40,14 +40,14 @@
         </Style>
     </Window.Resources>
     <Border BorderBrush="Black" BorderThickness="1">
-        <Border Background="#FFCCCADD" BorderBrush="#FF4F5A66" BorderThickness="1">
+        <Border Background="#FFD6E8FF" BorderBrush="#FF4F5A66" BorderThickness="1">
             <DockPanel>
                 <DockPanel DockPanel.Dock="Left" Width="173">
                     <StackPanel DockPanel.Dock="Left" Margin="6,6,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.RowSpan="5" Grid.ColumnSpan="2" Grid.Row="1" Height="350" Width="170">
                         <TextBlock Text="Fake Atlas" Foreground="#FF6397C5" FontFamily="Segoe Script" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="6" FontSize="28" Grid.Row="0" Grid.Column="0" Width="168" Grid.ColumnSpan="2" Height="48"/>
                         <Button HorizontalAlignment="Left" Command="{Binding InfoCommand}"
                                 Style="{DynamicResource LiteralButton}" Height="50" Width="150" FontSize="20" WindowChrome.IsHitTestVisibleInChrome="True">
-                            <TextBlock Padding="2" HorizontalAlignment="Left" Text="{DynamicResource m_Info}" TextWrapping="Wrap"/>
+                            <TextBlock HorizontalAlignment="Left" Text="{DynamicResource m_Info}" TextWrapping="Wrap"/>
                             <Button.Triggers>
                                 <EventTrigger RoutedEvent="Button.Click">
                                     <BeginStoryboard>
@@ -61,7 +61,7 @@
                                 </EventTrigger>
                             </Button.Triggers>
                         </Button>
-                        <Button Padding="6" HorizontalAlignment="Left" Command="{Binding FindCommand}" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_Find}" Height="50" FontSize="20">
+                        <Button HorizontalAlignment="Left" Command="{Binding FindCommand}" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_Find}" Height="50" FontSize="20">
                             <Button.Triggers>
                                 <EventTrigger RoutedEvent="Button.Click">
                                     <BeginStoryboard>
@@ -75,7 +75,7 @@
                                 </EventTrigger>
                             </Button.Triggers>
                         </Button>
-                        <Button Padding="6" HorizontalAlignment="Left" Command="{Binding OrdersCommand}" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_History}" Height="50" FontSize="20">
+                        <Button HorizontalAlignment="Left" Command="{Binding OrdersCommand}" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_History}" Height="50" FontSize="20">
                             <Button.Triggers>
                                 <EventTrigger RoutedEvent="Button.Click">
                                     <BeginStoryboard>
@@ -89,7 +89,7 @@
                                 </EventTrigger>
                             </Button.Triggers>
                         </Button>
-                        <Button  Padding="6" HorizontalAlignment="Left"  Command="{Binding HelpCommand}" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_Help}" Height="50" FontSize="20">
+                        <Button HorizontalAlignment="Left"  Command="{Binding HelpCommand}" Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_Help}" Height="50" FontSize="20">
                             <Button.Triggers>
                                 <EventTrigger RoutedEvent="Button.Click">
                                     <BeginStoryboard>
@@ -103,7 +103,7 @@
                                 </EventTrigger>
                             </Button.Triggers>
                         </Button>
-                        <Button  Padding="6" HorizontalAlignment="Left"  Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_SignOut}" Height="50" FontSize="20"/>
+                        <Button HorizontalAlignment="Left" Command="{Binding LogOutCommand}"  Style="{DynamicResource LiteralButton}" Content="{DynamicResource m_SignOut}" Height="50" FontSize="20"/>
                     </StackPanel>
                 </DockPanel>
                 <DockPanel DockPanel.Dock="Top">
