--- a/FakeAtlas/App.xaml
+++ b/FakeAtlas/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vm="clr-namespace:FakeAtlas.ViewModels"
              xmlns:v="clr-namespace:FakeAtlas.Views"
-             StartupUri="Views/MainWindow.xaml">
+             StartupUri="Views/LoginWindow.xaml">
     <Application.Resources>
 
         <ResourceDictionary>
