--- a/FakeAtlas/Views/MainWindow.xaml
+++ b/FakeAtlas/Views/MainWindow.xaml
@@ -39,12 +39,16 @@
             <Setter Property="Content" Value="&#xE923;"/>
         </Style>
     </Window.Resources>
-    <Border BorderBrush="Black" BorderThickness="1">
-        <Border Background="#FFD6E8FF" BorderBrush="#FF4F5A66" BorderThickness="1">
+    <Border BorderThickness="0">
+        <Border.Effect>
+            <DropShadowEffect/>
+        </Border.Effect>
+        <Border Background="#FFD6E8FF" BorderThickness="0">
             <DockPanel>
                 <DockPanel DockPanel.Dock="Left" Width="173">
                     <StackPanel DockPanel.Dock="Left" Margin="6,6,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.RowSpan="5" Grid.ColumnSpan="2" Grid.Row="1" Height="350" Width="170">
-                        <TextBlock Text="Fake Atlas" Foreground="#FF6397C5" FontFamily="Segoe Script" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="6" FontSize="28" Grid.Row="0" Grid.Column="0" Width="168" Grid.ColumnSpan="2" Height="48"/>
+                        <TextBlock Text="Fake Atlas" Foreground="#FF6397C5" FontFamily="Tahoma" 
+                                   HorizontalAlignment="Left" VerticalAlignment="Top" Margin="6" FontSize="28" Grid.Row="0" Grid.Column="0" Width="168" Grid.ColumnSpan="2" Height="48"/>
                         <Button HorizontalAlignment="Left" Command="{Binding InfoCommand}"
                                 Style="{DynamicResource LiteralButton}" Height="50" Width="150" FontSize="20" WindowChrome.IsHitTestVisibleInChrome="True">
                             <TextBlock HorizontalAlignment="Left" Text="{DynamicResource m_Info}" TextWrapping="Wrap"/>
@@ -118,8 +122,7 @@
                 </DockPanel>
                 <ContentControl x:Name="Pages" DockPanel.Dock="Left" Content="{Binding SelectedViewModel, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="1"
                                 Grid.RowSpan="7">
-                    <ContentControl.Triggers>
-                    </ContentControl.Triggers>
+                    
                 </ContentControl>
             </DockPanel>
         </Border>
